--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "bank2je",
+  "name": "csv-parser-saas",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "csv-parse": "^6.1.0",
-    "lucide-react": "^0.539.0",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "next": "15.1.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "csv-parse": "^5.5.6",
+    "pdfjs-dist": "^4.0.379",
+    "tesseract.js": "^5.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "15.1.3",
+    "tailwindcss": "^4.1.9",
+    "@tailwindcss/postcss": "^4.1.9"
   }
 }
